tests/expectations/compiler/records/nested_record_3_fail.out
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:14:5
     |
  14 |     bar: Foo,
     |     ^^^
     |
     = Remove the record `test.aleo::Foo` from `Bar`.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {
     |         ^^^^^^^^^
